--- a/services/etc/init/nfc_service.cfg
+++ b/services/etc/init/nfc_service.cfg
@@ -17,7 +17,12 @@
             "secon" : "u:r:nfc_service:s0",
             "caps" : ["CAP_NET_BIND_SERVICE", "CAP_NET_RAW"],
             "apl" : "system_basic",
-            "permission" : ["ohos.permission.VIBRATE", "ohos.permission.MANAGE_SECURE_SETTINGS", "ohos.permission.RUNNING_STATE_OBSERVER"]
+            "permission" : [
+                "ohos.permission.VIBRATE",
+                "ohos.permission.MANAGE_SECURE_SETTINGS",
+                "ohos.permission.RUNNING_STATE_OBSERVER",
+                "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED"
+            ]
         }
     ]
 }
