--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -40,6 +40,7 @@ nfc_service_source = [
   "src/card_emulation/ce_service.cpp",
   "src/card_emulation/host_card_emulation_manager.cpp",
   "src/card_emulation/nfc_ability_connection_callback.cpp",
+  "src/card_emulation/setting_data_share_impl.cpp",
   "src/external_deps/app_data_parser.cpp",
   "src/external_deps/external_deps_proxy.cpp",
   "src/external_deps/nfc_data_share_impl.cpp",
@@ -84,6 +85,7 @@ nfc_service_external_deps = [
   "ability_base:zuri",
   "ability_runtime:ability_manager",
   "ability_runtime:app_manager",
+  "ability_runtime:dataobs_manager",
   "access_token:libaccesstoken_sdk",
   "bundle_framework:appexecfwk_base",
   "bundle_framework:appexecfwk_core",
