--- a/test/fuzztest/services_test/tagdispatcher_test/tagdispatcher/tagdispatcher_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/tagdispatcher_test/tagdispatcher/tagdispatcher_fuzzer/BUILD.gn
@@ -45,7 +45,10 @@ ohos_fuzztest("TagDisPatcherFuzzTest") {
 
   external_deps = [
     "ability_base:want",
+    "ability_base:zuri",
     "ability_runtime:ability_manager",
+    "ability_runtime:app_manager",
+    "ability_runtime:dataobs_manager",
     "access_token:libaccesstoken_sdk",
     "c_utils:utils",
     "ipc:ipc_core",
