--- a/test/fuzztest/tags_test/ndefmessage/ndefmessage_fuzzer/BUILD.gn
+++ b/test/fuzztest/tags_test/ndefmessage/ndefmessage_fuzzer/BUILD.gn
@@ -41,7 +41,10 @@ ohos_fuzztest("NdefMessageFuzzTest") {
 
   external_deps = [
     "ability_base:want",
+    "ability_base:zuri",
     "ability_runtime:ability_manager",
+    "ability_runtime:app_manager",
+    "ability_runtime:dataobs_manager",
     "c_utils:utils",
     "ipc:ipc_core",
   ]
