--- a/test/fuzztest/tags_test/taginfo/getintextrasdata_fuzzer/BUILD.gn
+++ b/test/fuzztest/tags_test/taginfo/getintextrasdata_fuzzer/BUILD.gn
@@ -43,7 +43,10 @@ ohos_fuzztest("GetIntExtrasDataFuzzTest") {
 
   external_deps = [
     "ability_base:want",
+    "ability_base:zuri",
     "ability_runtime:ability_manager",
+    "ability_runtime:app_manager",
+    "ability_runtime:dataobs_manager",
     "c_utils:utils",
     "ipc:ipc_core",
   ]
