--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -50,7 +50,10 @@ unit_test_deps = [
 
 unit_test_external_deps = [
   "ability_base:want",
+  "ability_base:zuri",
   "ability_runtime:ability_manager",
+  "ability_runtime:app_manager",
+  "ability_runtime:dataobs_manager",
   "access_token:libaccesstoken_sdk",
   "bundle_framework:appexecfwk_core",
   "c_utils:utils",
