--- a/test/fuzztest/services_test/controller_test/nfccontrollerstub/nfccontrollerstub_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/controller_test/nfccontrollerstub/nfccontrollerstub_fuzzer/BUILD.gn
@@ -49,6 +49,7 @@ ohos_fuzztest("NfcControllerStubFuzzTest") {
     "ability_runtime:dataobs_manager",
     "access_token:libaccesstoken_sdk",
     "c_utils:utils",
+    "data_share:datashare_consumer",
     "ipc:ipc_core",
   ]
 }
