--- a/test/fuzztest/services_test/tags_test/tagsessionstub/tagsessionstub_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/tags_test/tagsessionstub/tagsessionstub_fuzzer/BUILD.gn
@@ -53,6 +53,7 @@ ohos_fuzztest("TagSessionStubFuzzTest") {
     "ability_runtime:dataobs_manager",
     "access_token:libaccesstoken_sdk",
     "c_utils:utils",
+    "data_share:datashare_consumer",
     "ipc:ipc_core",
   ]
 }
