--- a/test/fuzztest/services_test/utils_test/nfctimer/nfctimer_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/utils_test/nfctimer/nfctimer_fuzzer/BUILD.gn
@@ -50,6 +50,7 @@ ohos_fuzztest("NfcTimerFuzzTest") {
     "ability_runtime:dataobs_manager",
     "access_token:libaccesstoken_sdk",
     "c_utils:utils",
+    "data_share:datashare_consumer",
     "ipc:ipc_core",
   ]
 }
