--- a/test/fuzztest/tags_test/basictagsession/basictagsession_fuzzer/BUILD.gn
+++ b/test/fuzztest/tags_test/basictagsession/basictagsession_fuzzer/BUILD.gn
@@ -48,6 +48,7 @@ ohos_fuzztest("BasicTagSessionFuzzTest") {
     "ability_runtime:app_manager",
     "ability_runtime:dataobs_manager",
     "c_utils:utils",
+    "data_share:datashare_consumer",
     "ipc:ipc_core",
   ]
 }
