--- a/test/fuzztest/tags_test/mifareclassictag/mifareclassictag_fuzzer/BUILD.gn
+++ b/test/fuzztest/tags_test/mifareclassictag/mifareclassictag_fuzzer/BUILD.gn
@@ -47,6 +47,7 @@ ohos_fuzztest("MifareClassicTagFuzzTest") {
     "ability_runtime:app_manager",
     "ability_runtime:dataobs_manager",
     "c_utils:utils",
+    "data_share:datashare_consumer",
     "ipc:ipc_core",
   ]
 }
