--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -58,6 +58,7 @@ unit_test_external_deps = [
   "bundle_framework:appexecfwk_core",
   "c_utils:utils",
   "common_event_service:cesfwk_innerkits",
+  "data_share:datashare_consumer",
   "hilog:libhilog",
   "ipc:ipc_core",
   "safwk:system_ability_fwk",
