--- a/services/etc/init/nfc_service.cfg
+++ b/services/etc/init/nfc_service.cfg
@@ -19,7 +19,8 @@
                 "ohos.permission.VIBRATE",
                 "ohos.permission.MANAGE_SECURE_SETTINGS",
                 "ohos.permission.RUNNING_STATE_OBSERVER",
-                "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED"
+                "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED",
+                "ohos.permission.ABILITY_BACKGROUND_COMMUNICATION"
             ]
         }
     ]
