Feat:add tag on off interface
Signed-off-by: zhaoyi46@huawei.com <zhaoyi46@huawei.com>

--- a/interfaces/inner_api/tags/BUILD.gn
+++ b/interfaces/inner_api/tags/BUILD.gn
@@ -53,6 +53,7 @@ ohos_shared_library("nfc_inner_kits_tags") {
     "nfca_tag.cpp",
     "nfcb_tag.cpp",
     "nfcf_tag.cpp",
+    "reader_mode_callback_stub.cpp",
     "tag_foreground.cpp",
     "tag_session_proxy.cpp",
   ]
