--- a/interfaces/inner_api/common/BUILD.gn
+++ b/interfaces/inner_api/common/BUILD.gn
@@ -25,8 +25,9 @@ config("nfc_inner_kits_config") {
 
 config("nfc_inner_kits_public_config") {
   visibility = [ ":*" ]
+  defines = []
   if (nfc_service_feature_vendor_applications_enabled) {
-    defines = [ "VENDOR_APPLICATIONS_ENABLED" ]
+    defines += [ "VENDOR_APPLICATIONS_ENABLED" ]
   }
   include_dirs = [ "$NFC_DIR/interfaces/inner_api/common" ]
 }
