NAPI stop isDefaultService
Signed-off-by: yangyannan <yangyannan@huawei.com>

--- a/frameworks/js/napi/cardEmulation/BUILD.gn
+++ b/frameworks/js/napi/cardEmulation/BUILD.gn
@@ -45,6 +45,7 @@ ohos_shared_library("cardemulation") {
   ]
 
   external_deps = [
+    "ability_base:want",
     "bundle_framework:appexecfwk_base",
     "c_utils:utils",
     "hilog:libhilog",
