--- a/test/fuzztest/BUILD.gn
+++ b/test/fuzztest/BUILD.gn
@@ -18,6 +18,7 @@ group("fuzztest") {
   deps = [
     "controller_test/nfccontroller:nfccontroller_fuzztest",
     "services_test/controller_test/nfccontrollerstub:nfccontrollerstub_fuzztest",
+    "services_test/external_deps_test/externaldepsproxy:externaldepsproxy_fuzztest",
     "services_test/tagdispatcher_test/tagdispatcher:tagdispatcher_fuzztest",
     "services_test/tags_test/tagsessionstub:tagsessionstub_fuzztest",
     "services_test/utils_test/nfctimer:nfctimer_fuzztest",
