TDD编译报错修改
Signed-off-by: fengyong <fengyong21@h-partners.com>

--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -35,6 +35,9 @@ config("nfc_service_unit_test_config") {
   ]
 
   defines = []
+  if (nfc_service_feature_vendor_applications_enabled) {
+    defines += [ "VENDOR_APPLICATIONS_ENABLED" ]
+  }
   cflags_cc = []
   ldflags = []
   libs = []
