Signed-off-by: wujie <1255071198@qq.com>
fix: NFC alarm rectification
Signed-off-by: wujie <1255071198@qq.com>

--- a/test/fuzztest/services_test/controller_test/nfccontrollerstub/nfccontrollerstub_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/controller_test/nfccontrollerstub/nfccontrollerstub_fuzzer/BUILD.gn
@@ -26,6 +26,11 @@ ohos_fuzztest("NfcControllerStubFuzzTest") {
     "$NFC_DIR/interfaces/inner_api/controller",
   ]
 
+  defines = []
+  if (nfc_service_feature_vendor_applications_enabled) {
+    defines += [ "VENDOR_APPLICATIONS_ENABLED" ]
+  }
+
   cflags = [
     "-g",
     "-O0",
