--- a/test/fuzztest/services_test/external_deps_test/externaldepsproxy/externaldepsproxy_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/external_deps_test/externaldepsproxy/externaldepsproxy_fuzzer/BUILD.gn
@@ -47,6 +47,7 @@ ohos_fuzztest("ExTernalDepsProxyFuzzTest") {
     "ability_runtime:app_manager",
     "ability_runtime:dataobs_manager",
     "access_token:libaccesstoken_sdk",
+    "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "data_share:datashare_consumer",
     "ipc:ipc_core",
