--- a/test/fuzztest/services_test/tagdispatcher_test/tagdispatcher/tagdispatcher_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/tagdispatcher_test/tagdispatcher/tagdispatcher_fuzzer/BUILD.gn
@@ -50,6 +50,7 @@ ohos_fuzztest("TagDisPatcherFuzzTest") {
     "ability_runtime:app_manager",
     "ability_runtime:dataobs_manager",
     "access_token:libaccesstoken_sdk",
+    "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "data_share:datashare_consumer",
     "ipc:ipc_core",
