--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -100,16 +100,114 @@ ohos_unittest("controller_test") {
 ohos_unittest("cardemulation_test") {
   module_out_path = "nfc/services"
 
+  sources = [ "cardemulation_test/cardemulation_test.cpp" ]
+
+  configs = [ ":nfc_service_unit_test_config" ]
+
+  deps = unit_test_deps
+
+  external_deps = unit_test_external_deps
+
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
+ohos_unittest("ce_service_test") {
+  module_out_path = "nfc/services"
+
+  sources = [ "ce_service_test/ce_service_test.cpp" ]
+
+  configs = [ ":nfc_service_unit_test_config" ]
+
+  deps = unit_test_deps
+
+  external_deps = unit_test_external_deps
+
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
+ohos_unittest("hce_cmd_callback_stub_test") {
+  module_out_path = "nfc/services"
+
+  sources = [ "hce_cmd_callback_stub_test/hce_cmd_callback_stub_test.cpp" ]
+
+  configs = [ ":nfc_service_unit_test_config" ]
+
+  deps = unit_test_deps
+
+  external_deps = unit_test_external_deps
+
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
+ohos_unittest("hce_session_test") {
+  module_out_path = "nfc/services"
+
+  sources = [ "hce_session_test/hce_session_test.cpp" ]
+
+  configs = [ ":nfc_service_unit_test_config" ]
+
+  deps = unit_test_deps
+
+  external_deps = unit_test_external_deps
+
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
+ohos_unittest("host_card_emulation_manager_test") {
+  module_out_path = "nfc/services"
+
   sources = [
-    "cardemulation_test/cardemulation_test.cpp",
-    "cardemulation_test/ce_service_test.cpp",
-    "cardemulation_test/hce_cmd_callback_stub_test.cpp",
-    "cardemulation_test/hce_session_test.cpp",
-    "cardemulation_test/host_card_emulation_manager_test.cpp",
-    "cardemulation_test/nci_ce_proxy_test.cpp",
-    "cardemulation_test/nci_nfcc_proxy_test.cpp",
-    "cardemulation_test/nci_tag_proxy_test.cpp",
+    "host_card_emulation_manager_test/host_card_emulation_manager_test.cpp",
   ]
+
+  configs = [ ":nfc_service_unit_test_config" ]
+
+  deps = unit_test_deps
+
+  external_deps = unit_test_external_deps
+
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
+ohos_unittest("nci_ce_proxy_test") {
+  module_out_path = "nfc/services"
+
+  sources = [ "nci_ce_proxy_test/nci_ce_proxy_test.cpp" ]
+
+  configs = [ ":nfc_service_unit_test_config" ]
+
+  deps = unit_test_deps
+
+  external_deps = unit_test_external_deps
+
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
+ohos_unittest("nci_nfcc_proxy_test") {
+  module_out_path = "nfc/services"
+
+  sources = [ "nci_nfcc_proxy_test/nci_nfcc_proxy_test.cpp" ]
+
+  configs = [ ":nfc_service_unit_test_config" ]
+
+  deps = unit_test_deps
+
+  external_deps = unit_test_external_deps
+
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
+ohos_unittest("nci_tag_proxy_test") {
+  module_out_path = "nfc/services"
+
+  sources = [ "nci_tag_proxy_test/nci_tag_proxy_test.cpp" ]
 
   configs = [ ":nfc_service_unit_test_config" ]
 
@@ -233,7 +331,14 @@ group("nfc_service_unittest") {
   testonly = true
   deps = [
     ":cardemulation_test",
+    ":ce_service_test",
     ":controller_test",
+    ":hce_cmd_callback_stub_test",
+    ":hce_session_test",
+    ":host_card_emulation_manager_test",
+    ":nci_ce_proxy_test",
+    ":nci_nfcc_proxy_test",
+    ":nci_tag_proxy_test",
     ":public_test",
     ":services_tags_test",
     ":services_test",
