--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -142,6 +142,21 @@ ohos_unittest("hce_cmd_callback_stub_test") {
   subsystem_name = "communication"
 }
 
+ohos_unittest("hce_service_test") {
+  module_out_path = "nfc/services"
+
+  sources = [ "hce_service_test/hce_service_test.cpp" ]
+
+  configs = [ ":nfc_service_unit_test_config" ]
+
+  deps = unit_test_deps
+
+  external_deps = unit_test_external_deps
+
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
 ohos_unittest("hce_session_test") {
   module_out_path = "nfc/services"
 
@@ -334,6 +349,7 @@ group("nfc_service_unittest") {
     ":ce_service_test",
     ":controller_test",
     ":hce_cmd_callback_stub_test",
+    ":hce_service_test",
     ":hce_session_test",
     ":host_card_emulation_manager_test",
     ":nci_ce_proxy_test",
