--- a/interfaces/inner_api/common/BUILD.gn
+++ b/interfaces/inner_api/common/BUILD.gn
@@ -65,6 +65,7 @@ ohos_shared_library("nfc_inner_kits_common") {
     "ipc:ipc_core",
   ]
 
+  innerapi_tags = [ "platformsdk" ]
   part_name = "nfc"
   subsystem_name = "communication"
 }
