--- a/interfaces/inner_api/controller/BUILD.gn
+++ b/interfaces/inner_api/controller/BUILD.gn
@@ -77,6 +77,7 @@ ohos_shared_library("nfc_inner_kits_controller") {
     "samgr:samgr_proxy",
   ]
 
+  innerapi_tags = [ "platformsdk" ]
   part_name = "nfc"
   subsystem_name = "communication"
 }
