--- a/nfc.gni
+++ b/nfc.gni
@@ -25,4 +25,8 @@ declare_args() {
       global_parts_info.nfc_service_feature_vendor_applications_enabled)) {
     nfc_service_feature_vendor_applications_enabled = true
   }
+  nfc_sim_feature = false
+  if (defined(global_parts_info.nfc_sim_feature)) {
+    nfc_sim_feature = true
+  }
 }
