--- a/interfaces/inner_api/tags/BUILD.gn
+++ b/interfaces/inner_api/tags/BUILD.gn
@@ -80,6 +80,7 @@ ohos_shared_library("nfc_inner_kits_tags") {
     "samgr:samgr_proxy",
   ]
 
+  innerapi_tags = [ "platformsdk" ]
   part_name = "nfc"
   subsystem_name = "communication"
 }
