--- a/test/fuzztest/tags_test/ndefmessage/ndefmessage_fuzzer/BUILD.gn
+++ b/test/fuzztest/tags_test/ndefmessage/ndefmessage_fuzzer/BUILD.gn
@@ -48,6 +48,7 @@ ohos_fuzztest("NdefMessageFuzzTest") {
     "ability_runtime:dataobs_manager",
     "c_utils:utils",
     "data_share:datashare_consumer",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
