--- a/test/fuzztest/controller_test/nfccontroller/nfccontroller_fuzzer/BUILD.gn
+++ b/test/fuzztest/controller_test/nfccontroller/nfccontroller_fuzzer/BUILD.gn
@@ -47,6 +47,7 @@ ohos_fuzztest("NfcControllerFuzzTest") {
     "ability_runtime:dataobs_manager",
     "c_utils:utils",
     "data_share:datashare_consumer",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
