--- a/test/fuzztest/services_test/external_deps_test/externaldepsproxy/externaldepsproxy_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/external_deps_test/externaldepsproxy/externaldepsproxy_fuzzer/BUILD.gn
@@ -50,6 +50,7 @@ ohos_fuzztest("ExTernalDepsProxyFuzzTest") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "data_share:datashare_consumer",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
