--- a/test/fuzztest/services_test/tagdispatcher_test/tagdispatcher/tagdispatcher_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/tagdispatcher_test/tagdispatcher/tagdispatcher_fuzzer/BUILD.gn
@@ -53,6 +53,7 @@ ohos_fuzztest("TagDisPatcherFuzzTest") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "data_share:datashare_consumer",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
