--- a/test/fuzztest/services_test/tags_test/tagsessionstub/tagsessionstub_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/tags_test/tagsessionstub/tagsessionstub_fuzzer/BUILD.gn
@@ -55,6 +55,7 @@ ohos_fuzztest("TagSessionStubFuzzTest") {
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "data_share:datashare_consumer",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
