--- a/test/fuzztest/tags_test/mifareultralighttag/mifareultralighttag_fuzzer/BUILD.gn
+++ b/test/fuzztest/tags_test/mifareultralighttag/mifareultralighttag_fuzzer/BUILD.gn
@@ -49,6 +49,7 @@ ohos_fuzztest("MifareUltralightTagFuzzTest") {
     "ability_runtime:dataobs_manager",
     "c_utils:utils",
     "data_share:datashare_consumer",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
