--- a/test/fuzztest/tags_test/taginfo/getintextrasdata_fuzzer/BUILD.gn
+++ b/test/fuzztest/tags_test/taginfo/getintextrasdata_fuzzer/BUILD.gn
@@ -50,6 +50,7 @@ ohos_fuzztest("GetIntExtrasDataFuzzTest") {
     "ability_runtime:dataobs_manager",
     "c_utils:utils",
     "data_share:datashare_consumer",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
