--- a/services/etc/init/nfc_service.cfg
+++ b/services/etc/init/nfc_service.cfg
@@ -20,7 +20,9 @@
                 "ohos.permission.MANAGE_SECURE_SETTINGS",
                 "ohos.permission.RUNNING_STATE_OBSERVER",
                 "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED",
-                "ohos.permission.ABILITY_BACKGROUND_COMMUNICATION"
+                "ohos.permission.ABILITY_BACKGROUND_COMMUNICATION",
+                "ohos.permission.ACCESS_BLUETOOTH",
+                "ohos.permission.MANAGE_BLUETOOTH"
             ]
         }
     ]
