--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -60,6 +60,7 @@ unit_test_external_deps = [
   "ability_runtime:app_manager",
   "ability_runtime:dataobs_manager",
   "access_token:libaccesstoken_sdk",
+  "bluetooth:btframework",
   "bundle_framework:appexecfwk_core",
   "c_utils:utils",
   "common_event_service:cesfwk_innerkits",
