--- a/services/etc/init/nfc_service.cfg
+++ b/services/etc/init/nfc_service.cfg
@@ -22,7 +22,8 @@
                 "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED",
                 "ohos.permission.ABILITY_BACKGROUND_COMMUNICATION",
                 "ohos.permission.ACCESS_BLUETOOTH",
-                "ohos.permission.MANAGE_BLUETOOTH"
+                "ohos.permission.MANAGE_BLUETOOTH",
+                "ohos.permission.GET_RUNNING_INFO"
             ]
         }
     ]
