--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -192,6 +192,21 @@ ohos_unittest("host_card_emulation_manager_test") {
   subsystem_name = "communication"
 }
 
+ohos_unittest("isodep_card_handler_test") {
+  module_out_path = "nfc/services"
+
+  sources = [ "isodep_card_handler_test/isodep_card_handler_test.cpp" ]
+
+  configs = [ ":nfc_service_unit_test_config" ]
+
+  deps = unit_test_deps
+
+  external_deps = unit_test_external_deps
+
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
 ohos_unittest("nci_ce_proxy_test") {
   module_out_path = "nfc/services"
 
@@ -360,6 +375,7 @@ group("nfc_service_unittest") {
     ":hce_service_test",
     ":hce_session_test",
     ":host_card_emulation_manager_test",
+    ":isodep_card_handler_test",
     ":nci_ce_proxy_test",
     ":nci_nfcc_proxy_test",
     ":nci_tag_proxy_test",
