--- a/services/etc/init/nfc_service.cfg
+++ b/services/etc/init/nfc_service.cfg
@@ -23,7 +23,8 @@
                 "ohos.permission.ABILITY_BACKGROUND_COMMUNICATION",
                 "ohos.permission.ACCESS_BLUETOOTH",
                 "ohos.permission.MANAGE_BLUETOOTH",
-                "ohos.permission.GET_RUNNING_INFO"
+                "ohos.permission.GET_RUNNING_INFO",
+                "ohos.permission.MANAGE_SETTINGS"
             ]
         }
     ]
