Signed-off-by: wujie <wujie150@h-partners.com> fixbuf: nfc Add secure compilation options
Signed-off-by: wujie <wujie150@h-partners.com>

--- a/interfaces/inner_api/cardEmulation/BUILD.gn
+++ b/interfaces/inner_api/cardEmulation/BUILD.gn
@@ -39,6 +39,7 @@ ohos_shared_library("nfc_inner_kits_card_emulation") {
     integer_overflow = true
     cfi_cross_dso = true
     debug = false
+    ubsan = true
   }
   branch_protector_ret = "pac_ret"
   sources = [
