--- a/frameworks/js/napi/controller/BUILD.gn
+++ b/frameworks/js/napi/controller/BUILD.gn
@@ -22,6 +22,7 @@ ohos_shared_library("controller") {
     integer_overflow = true
     cfi_cross_dso = true
     debug = false
+    ubsan = true
   }
   branch_protector_ret = "pac_ret"
   defines = [ "DEBUG" ]
