--- a/interfaces/inner_api/controller/BUILD.gn
+++ b/interfaces/inner_api/controller/BUILD.gn
@@ -42,6 +42,7 @@ ohos_shared_library("nfc_inner_kits_controller") {
     integer_overflow = true
     cfi_cross_dso = true
     debug = false
+    ubsan = true
   }
   branch_protector_ret = "pac_ret"
   sources = [
