--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -185,6 +185,7 @@ ohos_shared_library("nfc_service") {
     integer_overflow = true
     cfi_cross_dso = true
     debug = false
+    ubsan = true
   }
   branch_protector_ret = "pac_ret"
   sources = nfc_service_source
