--- a/services/src/nci_adapter/nci_native_default/BUILD.gn
+++ b/services/src/nci_adapter/nci_native_default/BUILD.gn
@@ -41,8 +41,9 @@ ohos_shared_library("nci_native_default") {
     integer_overflow = true
     cfi_cross_dso = true
     debug = false
+    ubsan = true
   }
-  stack_protector_ret = true
+  branch_protector_ret = "pac_ret"
   sources = [
     "src/extns.cpp",
     "src/nci_ce_impl_default.cpp",
