--- a/test/fuzztest/BUILD.gn
+++ b/test/fuzztest/BUILD.gn
@@ -27,9 +27,11 @@ group("fuzztest") {
     "services_test/hostcardemulationmanager_test/hostcardemulationmanager:hostcardemulationmanager_fuzztest",
     "services_test/nci_adapter_test/ncitagproxy:ncitagproxy_fuzztest",
     "services_test/ndefmsgcallback_test/ndefmsgcallbackstub:ndefmsgcallbackstub_fuzztest",
+    "services_test/nfcpollingmanager_test/nfcpollingmanager:nfcpollingmanager_fuzztest",
     "services_test/settingdatashareimpl_test/settingdatashareimpl:settingdatashareimpl_fuzztest",
     "services_test/tagdispatcher_test/tagdispatcher:tagdispatcher_fuzztest",
     "services_test/tags_test/tagsessionstub:tagsessionstub_fuzztest",
+    "services_test/tagsession_test/tagsession:tagsession_fuzztest",
     "services_test/utils_test/nfctimer:nfctimer_fuzztest",
     "services_test/wificonnectionmanager_test/wificonnectionmanager:wificonnectionmanager_fuzztest",
     "tags_test/basictagsession:basictagsession_fuzztest",
