--- a/services/etc/init/nfc_service.cfg
+++ b/services/etc/init/nfc_service.cfg
@@ -24,7 +24,8 @@
                 "ohos.permission.ACCESS_BLUETOOTH",
                 "ohos.permission.MANAGE_BLUETOOTH",
                 "ohos.permission.GET_RUNNING_INFO",
-                "ohos.permission.MANAGE_SETTINGS"
+                "ohos.permission.MANAGE_SETTINGS",
+                "ohos.permission.SET_WIFI_CONFIG"
             ]
         }
     ]
