add notification cfg
Signed-off-by: amunra03 <liumanhao@huawei.com>

--- a/services/etc/init/nfc_service.cfg
+++ b/services/etc/init/nfc_service.cfg
@@ -25,7 +25,9 @@
                 "ohos.permission.MANAGE_BLUETOOTH",
                 "ohos.permission.GET_RUNNING_INFO",
                 "ohos.permission.MANAGE_SETTINGS",
-                "ohos.permission.SET_WIFI_CONFIG"
+                "ohos.permission.SET_WIFI_CONFIG",
+                "ohos.permission.NOTIFICATION_CONTROLLER",
+                "ohos.permission.NOTIFICATION_AGENT_CONTROLLER"
             ]
         }
     ]
