独立编译整改
Signed-off-by: fengyong <fengyong21@h-partners.com>

--- a/services/src/notification/BUILD.gn
+++ b/services/src/notification/BUILD.gn
@@ -49,6 +49,7 @@ ohos_shared_library("nfc_notification") {
     "hilog:libhilog",
     "i18n:intl_util",
     "image_framework:image_native",
+    "ipc:ipc_single",
   ]
 
   defines = [ "DEBUG" ]
