--- a/frameworks/cj/cardEmulation/BUILD.gn
+++ b/frameworks/cj/cardEmulation/BUILD.gn
@@ -36,6 +36,7 @@ ohos_shared_library("cj_nfc_cardemulation_ffi") {
     "c_utils:utils",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
+    "ipc:ipc_single",
     "napi:ace_napi",
     "napi:cj_bind_ffi",
     "napi:cj_bind_native",
