--- a/test/fuzztest/services_test/hostcardemulationmanager_test/hostcardemulationmanager/hostcardemulationmanager_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/hostcardemulationmanager_test/hostcardemulationmanager/hostcardemulationmanager_fuzzer/BUILD.gn
@@ -65,6 +65,7 @@ ohos_fuzztest("HostCardEmulationManagerFuzzTest") {
     "samgr:samgr_proxy",
     "screenlock_mgr:screenlock_client",
   ]
+  defines = [ "DTFUZZ_TEST" ]
 }
 
 group("fuzztest") {
