--- a/test/fuzztest/services_test/nfccontrollerimpl_test/nfccontrollerimpl/nfccontrollerimpl_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/nfccontrollerimpl_test/nfccontrollerimpl/nfccontrollerimpl_fuzzer/BUILD.gn
@@ -31,6 +31,8 @@ ohos_fuzztest("NfcControllerImplFuzzTest") {
     defines += [ "VENDOR_APPLICATIONS_ENABLED" ]
   }
 
+  defines += [ "DTFUZZ_TEST" ]
+
   cflags = [
     "-g",
     "-O0",
